adjustment docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
 
   cms:
     build:
-      context: ./material-dashboard-react
+      context: ./dashboard-cms
       dockerfile: Dockerfile
     container_name: cms_app
     ports:
