--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - "3001:3001"
     environment:
       - PORT=3001
-      - BACKEND_API_URL=http://localhost:3000/api
+      - BACKEND_API_URL=192.168.1.53:3000/api
     depends_on:
       - backend
 
@@ -39,7 +39,7 @@ services:
       - "3002:3002"
     environment:
       - PORT=3002
-      - BACKEND_API_URL=http://localhost:3000/api
+      - BACKEND_API_URL=192.168.1.53:3000/api
     depends_on:
       - backend
 
