adjustment docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,9 @@ services:
     container_name: cms_app
     env_file:
       - ./dashboard-cms/.env.prod
+    environment:
+      - ESLINT_NO_DEV_ERRORS=true 
+      - DISABLE_ESLINT_PLUGIN=true 
     ports:
       - "3002:3002"
     depends_on:
